<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"

                android:orientation="vertical">

                <br.com.cristianodp.widge.SimpleItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dash_saved"
                    app:icon="@drawable/ic_money_saved"
                    app:textColor="@color/colorWhite"
                    app:label="@string/dashboard_saved" />

                <br.com.cristianodp.widge.SimpleItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dash_receive"
                    app:icon="@drawable/ic_receive"
                    app:style="style1"
                    app:textColor="@color/colorWhite"
                    app:label="@string/dashboard_incomes" />

                <br.com.cristianodp.widge.SimpleItemView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dash_pay"
                    app:icon="@drawable/ic_pay"
                    app:textColor="@color/colorWhite"
                    app:label="@string/dashboard_expenses" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerYearMonth"
                    android:layout_width="@dimen/width_combo"
                    android:layout_height="?attr/actionBarSize" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:background="@color/colorAccent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                    app:theme="@style/ToolBarStyle" />
            </LinearLayout>


        </android.support.design.widget.CollapsingToolbarLayout>

        <br.com.cristianodp.widge.SimpleItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dash_balence"
            app:icon="@drawable/ic_wallet"
            app:label="@string/dashboard_balance"
            app:textColor="@color/colorWhite"
            app:style="style1" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/activity_dashboard_content" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        app:srcCompat="@drawable/ic_add_24dp" />


</android.support.design.widget.CoordinatorLayout>
